--- a/package.json
+++ b/package.json
@@ -15,5 +15,20 @@
   "bugs": {
     "url": "https://github.com/devcoy/nodejs-clean-architecture/issues"
   },
-  "homepage": "https://github.com/devcoy/nodejs-clean-architecture#readme"
+  "homepage": "https://github.com/devcoy/nodejs-clean-architecture#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
+    "@types/node": "^16.3.3",
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.5"
+  }
 }
