--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Clean architecture in Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/node": "^16.3.3",
+    "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   }
