--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "helmet": "^4.6.0"
+    "helmet": "^4.6.0",
+    "mongoose": "^5.13.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
