--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
