--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
     "@types/node": "^16.3.3",
+    "@types/uuid": "^8.3.1",
     "chalk": "^2.4.2",
     "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
